Updated moped photo

--- a/turing-scheme.html
+++ b/turing-scheme.html
@@ -128,7 +128,7 @@
                 </p>
 
                 <p>
-                <img src="images/mopeds.jpg"
+                <img src="images/mopeds-compressed.jpg"
                 </p>
                 <h3>The Experience</h3>
                 <p>
