Remove avdos-vr data link

--- a/affective-video-database-online-study.html
+++ b/affective-video-database-online-study.html
@@ -71,7 +71,10 @@
 
                 <p class="lead">AVDOS-VR: Physiological signals and continous self ratings in remote VR as published in <a href="">(pending)</a></p>
 
+                <p>link 1: <a href="">pending</a></p>
+                <!--
                 <p>link 1: <a href="https://livebournemouthac-my.sharepoint.com/:f:/g/personal/mgnacek_bournemouth_ac_uk/Epvx6rZ14xJNggqFTttwXRMBJDNhzxWWhCTTIk52oFgAqQ?e=6lybKm">Bournemouth University OneDrive</a></p>
+                -->
             </div> <!-- end s-content__main -->
 
         </article>
