Added nature scientific reports publication links

--- a/affective-video-database-online-study.html
+++ b/affective-video-database-online-study.html
@@ -69,13 +69,13 @@
 
                 <p>link 1: <a href="https://livebournemouthac-my.sharepoint.com/:f:/g/personal/mgnacek_bournemouth_ac_uk/EvHnreMKjgVMl0vwh4IFVugBu23nRrLYFKGEEPrd3JLaQA?e=jm6Wjm">Bournemouth University OneDrive</a></p>
 
-                <p class="lead">AVDOS-VR: Physiological signals and continous self ratings in remote VR as published in <a href="">(pending)</a></p>
+                <p class="lead">AVDOS-VR: Physiological signals and continous self ratings in remote VR as published in <a href="https://www.nature.com/articles/s41597-024-02953-6">Nature Scientific Reports</a></p>
 
                 <!--<p>link 1: <a href="">pending</a></p>-->
 
                 <p>Data: <a href="https://livebournemouthac-my.sharepoint.com/:f:/g/personal/mgnacek_bournemouth_ac_uk/Epvx6rZ14xJNggqFTttwXRMBJDNhzxWWhCTTIk52oFgAqQ?e=6lybKm">Bournemouth University OneDrive</a></p>
 
-                <p>Data (alternative): <a href="">Figshare (pending)</a></p>
+                <p>Data (alternative): <a href="https://doi.org/10.6084/m9.figshare.c.6736533.v1">Figshare</a></p>
 
                 <p>Code: <a href="https://github.com/michalgnacek/AVDOS-VR">GitHub</a></p>
 
