--- a/affective-video-database-online-study.html
+++ b/affective-video-database-online-study.html
@@ -67,7 +67,7 @@
 
                 <p class="lead">Videos & self ratings as published in <a href="https://ieeexplore.ieee.org/document/9953891">IEEExplore</a></p>
 
-                <p>link 1: <a href="https://livebournemouthac-my.sharepoint.com/:f:/g/personal/mgnacek_bournemouth_ac_uk/EvHnreMKjgVMl0vwh4IFVugBu23nRrLYFKGEEPrd3JLaQA?e=jm6Wjm">Bournemouth University OneDrive</a></p>
+                <p>link 1: <a href="https://doi.org/10.6084/m9.figshare.27651384.v2">Figshare</a></p>
 
                 <p class="lead">AVDOS-VR: Physiological signals and continous self ratings in remote VR as published in <a href="https://www.nature.com/articles/s41597-024-02953-6">Nature Scientific Reports</a></p>
 
