--- a/affective-video-database-online-study.html
+++ b/affective-video-database-online-study.html
@@ -73,9 +73,7 @@
 
                 <!--<p>link 1: <a href="">pending</a></p>-->
 
-                <p>Data: <a href="https://livebournemouthac-my.sharepoint.com/:f:/g/personal/mgnacek_bournemouth_ac_uk/Epvx6rZ14xJNggqFTttwXRMBJDNhzxWWhCTTIk52oFgAqQ?e=6lybKm">Bournemouth University OneDrive</a></p>
-
-                <p>Data (alternative): <a href="https://doi.org/10.6084/m9.figshare.c.6736533.v1">Figshare</a></p>
+                <p>Data: <a href="https://doi.org/10.6084/m9.figshare.c.6736533.v1">Figshare</a></p>
 
                 <p>Code: <a href="https://github.com/michalgnacek/AVDOS-VR">GitHub</a></p>
 
